--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+						<span class="avatar"><img src="images/photo.jpg" alt="" /></span>
 						<h1>My name is <strong>Alexandre</strong>, I'm a Java developer, I like cooking, playing guitar, cinema and photography..</h1>
 						<ul class="icons">
 							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
